fix overflow on right side

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,11 @@
     } */
 }
 
+@media only screen and (max-width: 1280px){
+    html, body {
+        overflow-x: hidden;
+    }
+}
 h1 {
     text-align: center;
     /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
@@ -82,7 +87,7 @@ h1 {
 
 body {
     max-width: 100%;
-/*    overflow-x: hidden; */
+    overflow-x: hidden; 
 }
 
 .wrapper {
@@ -155,9 +160,9 @@ p { font-family: "shadow", sans-serif;
 .vid-container {
         position: relative;
         overflow: hidden;
-        width: 80%;
+        width: 100%;
         height: 40%;
-        left: 30%;
+        left: 25%;
         padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
 
